created new default screen

--- a/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -38,6 +38,7 @@
 <div class="well" style="padding: 8px 0;">
 	<ul class="nav nav-list">
 		<li class="nav-header">System Administration</li>
+		<li id="nav-SysAdminDashboard"><a href="#sysadmin/dashboard"><i class="icon-list-alt"></i>&nbsp;Dashboard</a></li>
 		<li id="nav-SysAdminSettings"><a href="#sysadmin/settings"><i class="icon-cog"></i>&nbsp;Settings</a></li>
 		<li id="nav-SysAdminAdministrators"><a href="#sysadmin/administrators"><i class="icon-user"></i>&nbsp;Administrators</a></li>
 		<li id="nav-SysAdminAddCompany"><a href="#sysadmin/companies/add"><i class="icon-plus-sign"></i>&nbsp;Add Company</a></li>
@@ -55,7 +56,7 @@
 			</form>
 		</li>
 
-		<li class="nav-header currentCompany" id="currentCompanyName" style="margin-top: 0px; padding-top: 0px; display: none;">{Company Name}</li>
+		<li class="nav-header currentCompany" id="currentCompanyName" style="margin-top: -15px; padding-top: 0px; display: none;">{Company Name}</li>
 		<li class="currentCompany" id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
 		<li class="currentCompany" id="nav-exampleCompanySlugAllTransactions"><a href="#company/exampleCompanySlug/allTransactions"><i class="icon-eye-open"></i>&nbsp;All Transactions</a></li>
 		<li class="currentCompany" id="nav-exampleCompanySlugEmployees"><a href="#company/exampleCompanySlug/employees"><i class="icon-user"></i>&nbsp;Employees</a></li>
