working on admin ui

--- a/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -43,8 +43,8 @@
 		<li id="nav-SysAdminAdministrators"><a href="#sysadmin/administrators"><i class="icon-user"></i>&nbsp;Administrators</a></li>
 		<li id="nav-SysAdminAddCompany"><a href="#sysadmin/companies/add"><i class="icon-plus-sign"></i>&nbsp;Add Company</a></li>
 	
-		<li class="nav-header">View Company</li>
-		<li style="margin-top: 5px; margin-bottom: 5px;">
+		<li class="nav-header">Companies</li>
+		<li style="margin-top: 5px; margin-bottom: 0px;">
 			<form id="companyForm" style="margin: 0px;">
 
 			<div class="input-prepend">
@@ -55,9 +55,7 @@
 
 			</form>
 		</li>
-
-		<li class="nav-header currentCompany" id="currentCompanyName" style="margin-top: -15px; padding-top: 0px; display: none;">{Company Name}</li>
-		<li class="currentCompany" id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
+		<li class="currentCompany" style="margin-top: -20px;" id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
 		<li class="currentCompany" id="nav-exampleCompanySlugAllTransactions"><a href="#company/exampleCompanySlug/allTransactions"><i class="icon-eye-open"></i>&nbsp;All Transactions</a></li>
 		<li class="currentCompany" id="nav-exampleCompanySlugEmployees"><a href="#company/exampleCompanySlug/employees"><i class="icon-user"></i>&nbsp;Employees</a></li>
 		<li class="currentCompany" id="nav-exampleCompanySlugNewStore"><a href="#company/exampleCompanySlug/newStore"><i class="icon-plus-sign"></i>&nbsp;New Store</a></li>
