--- a/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -16,6 +16,8 @@
 				$("#currentCompanyName").text($("#companyNames").val());
 				$(".currentCompany").show();
 				$("#clearCompanyButton").show();
+
+				location.replace("#company/exampleCompanySlug/financials");
 			}
 		});
 
@@ -30,6 +32,7 @@
 			$(".currentCompany").hide();
 			$("#currentCompanyName").text("");
 			$("#clearCompanyButton").hide();
+			location.replace("#sysadmin/dashboard");
 		});
 
 	});
@@ -49,13 +52,13 @@
 
 			<div class="input-prepend">
 				<span id="showAllCompanies" style="cursor: pointer;" class="add-on"><i class="icon-chevron-right"></i></span>
-				<input placeholder="Type company name" class="input-medium" id="companyNames" />
+				<input placeholder="Type company name" class="input-medium" id="companyNames" style="margin-bottom: 5px;" />
 				<p id="clearCompanyButton" style="display: none;" class="pull-right"><span id="clearCompany" style="cursor: pointer;" class="label">Clear</span></p>
 			</div>
 
 			</form>
 		</li>
-		<li class="currentCompany" style="margin-top: -30px;" id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
+		<li class="currentCompany" style="margin-top: -10px;" id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
 		<li class="currentCompany" id="nav-exampleCompanySlugAllTransactions"><a href="#company/exampleCompanySlug/allTransactions"><i class="icon-eye-open"></i>&nbsp;All Transactions</a></li>
 		<li class="currentCompany" id="nav-exampleCompanySlugEmployees"><a href="#company/exampleCompanySlug/employees"><i class="icon-user"></i>&nbsp;Employees</a></li>
 		<li class="currentCompany" id="nav-exampleCompanySlugNewStore"><a href="#company/exampleCompanySlug/newStore"><i class="icon-plus-sign"></i>&nbsp;New Store</a></li>
