--- a/src/sdk/CompositeInspector/Views/inspector.html
+++ b/src/sdk/CompositeInspector/Views/inspector.html
@@ -6,60 +6,152 @@
 		<title>Composite Inspector</title>
 		<script type="text/javascript" src="/composite/js/jquery/jquery-1.7.1.min.js"> </script>
 		<script type="text/javascript" src="/composite/js/jquery/jquery-ui-1.8.16.custom.min.js"> </script>
-		<script type="text/javascript" src="/composite/js/jquery/euclid-jquery-extensions.js"> </script>
 		<script type="text/javascript" src="/composite/js/bootstrap/bootstrap.min.js"> </script>
 		<script type="text/javascript" src="/composite/js/handlebars/handlebars-1.0.0.beta.6.js"> </script>
 		<script type="text/javascript" src="/composite/js/handlebars/euclid-handlebars-extensions.js"></script>
-		<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
 		<script type="text/javascript" src="/composite/js/euclid-prototype-extensions.js"> </script>
+		<script type="text/javascript" src="/composite/js/jquery/euclid-jquery-extensions.js"> </script>
+		<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
 
 		<link rel="Stylesheet" type="text/css" href="/composite/css/composite-inspector.css" />
 		<link rel="Stylesheet" type="text/css" href="/composite/css/smoothness/jquery-ui-1.8.16.custom.css" />
 		<link rel="stylesheet" type="text/css" href="/composite/css/bootstrap/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="/composite/css/bootstrap/bootstrap-subnav.css" />
 	</head>
 
-	<body style="padding-top:60px">
-		<div class="navbar navbar-fixed-top" id="navbar-container"></div>
+	<body style="padding-top:55px">
+		
+		<div class="navbar navbar-fixed-top" id="navbar-container">
+			<div class="navbar-inner">
+				<div class="container">
+					<div>
+						<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</a>
 
-		<div id="display-panel" class="row">
-			<div id="part-output" class="span8"></div>
-			
-			<div id="agent-output" class="span4">
-				<div class="row">
-					<div class="span12" id="queries"></div>
-				</div>
-				
-				<div class="row">
-					<div class="span12" id="read-models"></div>
-				</div>
-				
-				<div class="row">
-					<div class="span12" id="composite"></div>
-				</div>
-				
-				<div class="row">
-					<div class="span12" id="command-registry-table"></div>
-				</div>
-				
-				<div class="row">
-					<div class="span12" id="pager"></div>
+						<a class="brand" href="/composite/details" id="composite-name">{{Name}}</a>
+
+						<ul class="nav">
+							<li class="dropdown composite-dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Queries <b class="caret"></b></a>
+								<div id="composite-queries"></div>
+							</li>
+
+							<li class="dropdown composite-dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Input Models <b class="caret"></b></a>
+								<div id="composite-inputmodels"></div>
+							</li>
+					
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Agents <b class="caret"></b></a>
+								<div id="composite-agents">
+									<ul class="dropdown-menu">
+										{{#each Agents}}
+										<li class="dropdown">
+											<a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">{{DescriptiveName}}</a>
+										</li>
+										{{/each}}
+									</ul>
+								</div>
+							</li>
+
+							<li><a href="#" id="view-command-registry">Command Registry</a></li>
+							<li><a href="/composite/logs">Logs</a></li>
+						</ul>
+
+					</div>
 				</div>
 			</div>
+			<span id="composite-description">{{Description}}</span>
 		</div>
 		
 		<div class="row">
-			<div id="euclid-error-output" class="span12 hide">
-				<h4 class="left">Error</h4>
-			</div>
+			<div id="output" class="span12"></div>
+		</div>
+
+		<div class="row">
+			<div id="euclid-error-output" class="span12 hide"></div>
 		</div>
 	</body>
 	
 	<script type="text/javascript">
 		/// <reference path="/Assets/Scripts/euclid-0.9.js" />
+		var RECORDS_PER_PAGE = 10;
+		var display = "#output";
 
-		WorkWithDataFromUrl(
-			"/composite/api",
-			function (compositeData) { Using(compositeData).Fill("#navbar-container").With("/composite/ui/template/navbar"); }
-		);
+
+		WorkWithDataFromUrl("/composite/api", function (compositeMetadata) {
+			Using(compositeMetadata).Fill("#composite-name").TargetIsTemplate();
+
+			Using(compositeMetadata).Fill("#composite-description").TargetIsTemplate();
+
+			var queryRenderData = { ListClass: "dropdown-menu", ItemClass: "dropdown", Queries: compositeMetadata.Queries };
+			Using(queryRenderData).Fill("#composite-queries").With("/composite/ui/template/queries");
+
+			var inputModelRenderData = { ListClass: "dropdown-menu", ItemClass: "dropdown", InputModels: compositeMetadata.InputModels };
+			Using(inputModelRenderData).Fill("#composite-inputmodels").With("/composite/ui/template/input-models");
+
+			Using(compositeMetadata).Fill("#composite-agents").TargetIsTemplate();
+		});
+
+		$(document).on("click", ".query", function () {
+			var queryName = $(this).attr("data-query-name");
+			EUCLID.withQuery(queryName, function (query) {
+				Using(query)
+					.Render("/composite/ui/template/query")
+					.ReplaceContentsOf(display);
+			});
+		});
+
+		$(document).on("click", ".input-model", function() {
+			var inputModelName = $(this).attr("data-input-model-name");
+			WorkWithDataFromUrl(
+				"/composite/api/input-model/" + inputModelName,
+				function(inputModelMetadata) {
+					Using(inputModelMetadata)
+						.Render("/composite/ui/template/input-model")
+						.ReplaceContentsOf(display);
+				}
+			);
+		});
+
+		$(document).on("click", ".agent", function () {
+			$(display).empty();
+			var systemName = $(this).attr("data-agent-system-name");
+			WorkWithDataFromUrl("/composite/api/agent/" + systemName, function (agentMetadata) {
+
+				Using(agentMetadata).Fill(output).With("/composite/ui/template/commands");
+				Using(agentMetadata).Render("/composite/ui/template/queries").Manipulate(function (content) { $(output).append(content )});
+				Using(agentMetadata).Render("/composite/ui/template/read-models").Manipulate(function (content) { $(output).append(content) });
+			});
+		});
+
+		$(document).on("click", "#view-command-registry", function () {
+			getPublicationRecords(1);
+		});
+	
+		function getPublicationRecords(pageNumber) {
+			var offset = (pageNumber - 1) * RECORDS_PER_PAGE;
+			EUCLID.withQuery(
+				"CommandRegistryQueries",
+				function (query) {
+					var recordQuery = query.getMethodNamed("GetPublicationRecords", 2);
+					recordQuery.offset = offset;
+					recordQuery.recordsPerPage = RECORDS_PER_PAGE;
+
+					var form = recordQuery.getForm();
+
+					EUCLID.withFormResults(
+						form,
+						function (results) {
+							var pagerData = results;
+							pagerData["pageHandler"] = "getPublicationRecords";
+							Using(results).Fill(display).With("/composite/ui/template/command-registry-table");
+							Using(pagerData).Render("/composite/ui/template/pager").Manipulate(function (content) { $(display).append(content); });
+						});
+				});
+		}
 	</script>
 </html>
