display agent parts

--- a/src/sdk/CompositeInspector/Views/Templates/command-registry-table.html
+++ b/src/sdk/CompositeInspector/Views/Templates/command-registry-table.html
@@ -1,5 +1,5 @@
 ﻿<table class="table table-bordered table-striped table-condensed" id="registry-table">
-	<caption id="table-caption"><h5>{{TotalRecords}} total command publication records</h5></caption>
+	<caption id="table-caption" style="horiz-align: left;text-align: left"><h3>{{TotalRecords}} publication records</h3></caption>
 	<thead>
 		<tr>
 			<th>
