--- a/src/sdk/CompositeInspector/Views/Templates/commands.html
+++ b/src/sdk/CompositeInspector/Views/Templates/commands.html
@@ -1,18 +1,16 @@
-﻿<script type="text/javascript">
-	/// <reference path="/Assets/Scripts/euclid-0.9.js" />
-	$(document).ready(function () {
-		if (typeof commandScript === "undefined") {
-			$.getScript("/composite/js/composite-inspector-commands.js", function (data, textStatus, jqxhr) { $(".command").removeAttr("disabled"); });
-		} else {
-			$(".command").removeAttr("disabled");
-		}
-	});
-</script>
-<h5>Commands</h5>
-<ul>
-{{#Commands}}
-	<li id="{{../SystemName}}-command-{{Name}}">
+﻿<ul class="{{ListClass}}" id="command-list">
+	{{#Commands}}
+	<li id="command-{{Name}}" class="{{../ItemClass}}">
 		<a href="#" class="command" disabled="disabled" data-command-name="{{Name}}">{{Name}}</a>
 	</li>
-{{/Commands}}
+	{{/Commands}}
 </ul>
+<script type="text/javascript" language="javascript">
+	var root = "#command-list";
+	$(root).on("click", ".command", function () {
+		var commandName = $(this).attr("data-command-name");
+		alert("/composite/ui/template/command/" + commandName);
+
+		return false;
+	});
+</script>
