--- a/src/sdk/CompositeInspector/Views/Templates/read-models.html
+++ b/src/sdk/CompositeInspector/Views/Templates/read-models.html
@@ -1,38 +1,20 @@
-﻿<script type="text/javascript">
+﻿<ul class="{{ListClass}}">
+	{{#ReadModels}}
+	<li id="readmodel-{{Name}}" class="{{ItemClass}}">
+		<a href="#" class="read-model" data-agent-system-name="{{../SystemName}}" data-read-model-name="{{Name}}">{{Name}}</a>
+	</li>
+	{{/ReadModels}}
+</ul>
+
+<script type="text/javascript">
 	/// <reference path="/Assets/Scripts/euclid-0.9.js" />
-	var modal = $("<div id='modal'></div>");
 	$(document).ready(function () {
 		$(".read-model").click(function () {
 			var systemName = $(this).attr("data-agent-system-name");
-			var readModelName = $(this).text();
-			var target = $(this);
+			var readModelName = $(this).attr("data-read-model-name");
 
-			WorkWithDataFromUrl("/composite/api/readmodel/" + systemName + "/" + readModelName,
-				function (readModel) {
-					Using({ Properties: readModel })
-						.Render("/composite/ui/template/modal/read-model")
-						.Manipulate(function (content) {
-							$(modal).html("");
-							$(modal).append($(content));
-							$(modal).modal("show");
-						});
-				});
-
+			alert("/composite/api/readmodel/" + systemName + "/" + readModelName);
 			return false;
-		});
-
-		$(document).on("click", "#dismiss-modal", function () {
-			$("#modal").modal("hide");
-			$("#modal").remove();
 		});
 	});
 </script>
-
-<h5>Read Models</h5>
-<ul>
-{{#ReadModels}}
-	<li id="{{../SystemName}}-readmodel-{{Name}}">
-		<a href="#" class="read-model" data-agent-system-name="{{../SystemName}}">{{Name}}</a>
-	</li>
-{{/ReadModels}}
-</ul>
