--- a/src/sdk/CompositeInspector/Views/Templates/agents.html
+++ b/src/sdk/CompositeInspector/Views/Templates/agents.html
@@ -1,10 +1,13 @@
 ﻿<h3>Agents</h3>
 <ul>
-{{#Agents}}
+	{{#Agents}}
 	<li>
 		<a class="agent" href="/composite/agent/{{SystemName}}">{{DescriptiveName}}</a>
 		<br />
 		<small>{{Description}}</small>
 	</li>
-{{/Agents}}
+	{{/Agents}}
 </ul>
+
+<script type="text/javascript">
+</script>
