--- a/src/sdk/CompositeInspector/Views/Templates/command.html
+++ b/src/sdk/CompositeInspector/Views/Templates/command.html
@@ -1,4 +1,4 @@
-﻿<div id="command-container">
+<div id="command-container">
 ﻿	<h3>{{Name}} <small>The composite does not support this command (no input model registered)</small></h3>
 	<div class="well">
 	{{#Properties}}
