--- a/src/sdk/CompositeInspector/Views/inspector.html
+++ b/src/sdk/CompositeInspector/Views/inspector.html
@@ -58,7 +58,7 @@
 							</li>
 
 							<li><a href="#" id="view-command-registry" class="clear-agent-display">Command Registry</a></li>
-							<li><a href="/composite/logs" class="clear-agent-display">Logs</a></li>
+							<li><a href="#" id="view-composite-logs" class="clear-agent-display">Logs</a></li>
 						</ul>
 					</div>
 				</div>
@@ -107,36 +107,70 @@
 
 		$(document).on("click", ".clear-agent-display", function() {
 			$("#agent-output").empty();
-
-			return false;
 		});
-		
+
+		var logQuery;
+		var recordQuery;
+
 		$(document).on("click", "#view-command-registry", function () {
-			getPublicationRecords(1);
-
-			return false;
-		});
-	
-		function getPublicationRecords(pageNumber) {
-			var offset = (pageNumber - 1) * RECORDS_PER_PAGE;
-			EUCLID.withQuery(
+			if (!recordQuery) {
+				EUCLID.withQuery(
 				"CommandRegistryQueries",
 				function (query) {
-					var recordQuery = query.getMethodNamed("GetPublicationRecords", 2);
-					recordQuery.offset = offset;
-					recordQuery.recordsPerPage = RECORDS_PER_PAGE;
-
-					var form = recordQuery.getForm();
-
-					EUCLID.withFormResults(
-						form,
-						function (results) {
-							var pagerData = results;
-							pagerData["pageHandler"] = "getPublicationRecords";
-							Using(results).Fill(display).With("/composite/ui/template/command-registry-table");
-							Using(pagerData).Render("/composite/ui/template/pager").Manipulate(function (content) { $(display).append(content); });
-						});
+					recordQuery = query.getMethodNamed("GetPublicationRecords", 2);
+					getPublicationRecords(1);
 				});
+			} else {
+				getPublicationRecords(1);
+			}
+		});
+
+		$(document).on("click", "#view-composite-logs", function () {
+			if (!logQuery) {
+				EUCLID.withQuery(
+				"LogQueries",
+				function (query) {
+					logQuery = query.getMethodNamed("GetLogEntries", 2);
+					getLogEntries(1);
+				});
+			} else {
+				getLogEntries(1);
+			}
+		});
+
+
+		function getPublicationRecords(pageNumber) {
+			var offset = (pageNumber - 1) * RECORDS_PER_PAGE;
+			recordQuery.offset = offset;
+			recordQuery.recordsPerPage = RECORDS_PER_PAGE;
+			var form = recordQuery.getForm();
+
+			EUCLID.withFormResults(
+				form,
+				function (results) {
+					var pagerData = results;
+					pagerData["pageHandler"] = "getPublicationRecords";
+					Using(results).Fill(display).With("/composite/ui/template/command-registry-table");
+					Using(pagerData).Render("/composite/ui/template/pager").Manipulate(function (content) { $(display).append(content); });
+				}
+			);
+		}
+
+		function getLogEntries(pageNumber) {
+			var offset = (pageNumber - 1) * RECORDS_PER_PAGE;
+
+			logQuery.offset = offset;
+			logQuery.pageSize = RECORDS_PER_PAGE;
+			var form = logQuery.getForm();
+			EUCLID.withFormResults(
+				form,
+				function (results) {
+					var pagerData = results;
+					pagerData["pageHandler"] = "getLogEntries";
+					Using(results).Fill(display).With("/composite/ui/template/log-entry-table");
+					Using(pagerData).Render("/composite/ui/template/pager").Manipulate(function (content) { $(display).append(content); });
+				}
+			);
 		}
 	</script>
 </html>
