--- a/src/sdk/CompositeInspector/Views/inspector.html
+++ b/src/sdk/CompositeInspector/Views/inspector.html
@@ -113,16 +113,19 @@
 		var recordQuery;
 
 		$(document).on("click", "#view-command-registry", function () {
-			if (!recordQuery) {
-				EUCLID.withQuery(
-				"CommandRegistryQueries",
-				function (query) {
-					recordQuery = query.getMethodNamed("GetPublicationRecords", 2);
-					getPublicationRecords(1);
-				});
-			} else {
-				getPublicationRecords(1);
-			}
+//			if (!recordQuery) {
+//				EUCLID.withQuery(
+//				"CommandRegistryQueries",
+//				function (query) {
+//					recordQuery = query.getMethodNamed("GetPublicationRecords", 2);
+//					getPublicationRecords(1);
+//				});
+//			} else {
+//				getPublicationRecords(1);
+			//			}
+
+			getPublicationRecords(1);
+			
 		});
 
 		$(document).on("click", "#view-composite-logs", function () {
@@ -140,23 +143,36 @@
 
 
 		function getPublicationRecords(pageNumber) {
+			console.log("getPublicationRecords(" + pageNumber + ")");
 			var offset = (pageNumber - 1) * RECORDS_PER_PAGE;
-			recordQuery.offset = offset;
-			recordQuery.recordsPerPage = RECORDS_PER_PAGE;
-			var form = recordQuery.getForm();
-
-			EUCLID.withFormResults(
-				form,
-				function (results) {
+			RunQuery(
+				"CommandRegistryQueries.GetPublicationRecords",
+				{ offset: offset, recordsPerPage: RECORDS_PER_PAGE },
+				function(results) {
 					var pagerData = results;
 					pagerData["pageHandler"] = "getPublicationRecords";
-					Using(results).Render("/composite/ui/template/command-registry-table").Manipulate(function (content) {
+					Using(results).Render("/composite/ui/template/command-registry-table").Manipulate(function(content) {
 						$("#output").replaceContent(content);
-						Using(pagerData).Render("/composite/ui/template/pager").Manipulate(function (pager) { $(display).append(pager); });
+						Using(pagerData).Render("/composite/ui/template/pager").Manipulate(function(pager) { $(display).append(pager); });
 					});
-				}
-			);
+				});
 		}
+
+//			recordQuery.offset = offset;
+//			recordQuery.recordsPerPage = RECORDS_PER_PAGE;
+//			var form = recordQuery.getForm();
+
+//			EUCLID.withFormResults(
+//				form,
+//				function (results) {
+//					var pagerData = results;
+//					pagerData["pageHandler"] = "getPublicationRecords";
+//					Using(results).Render("/composite/ui/template/command-registry-table").Manipulate(function (content) {
+//						$("#output").replaceContent(content);
+//						Using(pagerData).Render("/composite/ui/template/pager").Manipulate(function (pager) { $(display).append(pager); });
+//					});
+//				}
+//			);
 
 		function getLogEntries(pageNumber) {
 			var offset = (pageNumber - 1) * RECORDS_PER_PAGE;
