--- a/src/sdk/CompositeInspector/Views/new.html
+++ b/src/sdk/CompositeInspector/Views/new.html
@@ -11,6 +11,8 @@
 	<script type="text/javascript" src="/composite/js/euclid-prototype-extensions.js"> </script>
 	<script type="text/javascript" src="/composite/js/jquery/euclid-jquery-extensions.js"> </script>
 	<script type="text/javascript" src="/composite/js/euclid-0.9.js"></script>
+	<script type="text/javascript" src="/composite/js/sammy/sammy.js"></script>
+	<script type="text/javascript" src="/composite/js/inspector/inspector.js"></script>
 	<link rel="Stylesheet" type="text/css" href="/composite/css/composite-inspector.css" />
 	<link rel="Stylesheet" type="text/css" href="/composite/css/smoothness/jquery-ui-1.8.16.custom.css" />
 	<link rel="stylesheet" type="text/css" href="/composite/css/bootstrap/bootstrap.min.css" />
@@ -22,27 +24,13 @@
 
 		<div class="row-fluid" style="background-color: #C0C0C0; border-bottom: 1px solid darkgray">
 
-			<div class="span12" style="margin-top: 5px; margin-left: 5px;">
-				<ul class="nav nav-pills" style="margin-bottom: 5px;">
-					<li class="active"><a href="#" id="composite-name">{{Name}}</a></li>
-					<li><a href="#" id="view-command-registry" class="clear-agent-display">Command Registry</a></li>
-					<li><a href="#" id="view-composite-logs" class="clear-agent-display">Logs</a></li>
-				</ul>
-			</div>
+			<div id="inspectorGlobalNav" class="span12" style="margin-top: 5px; margin-left: 5px;"></div>
 
 		</div>
 
 		<div class="row-fluid" style="height: 255px;">
 
-			<div class="span12" style="margin-left: 5px; margin-top: 5px;">
-
-				<div id="composite-agents">
-					<ul>{{#each Agents}}
-						<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">{{DescriptiveName}}</a>
-						</li>
-						{{/each}} </ul>
-				</div>
-
+			<div id="inspectorMain" class="span12" style="margin-left: 5px; margin-top: 5px;">
 				<span id="agent-output"></span><span id="output"></span><span id="euclid-error-output" class="hide"></span>
 			</div>
 
@@ -51,7 +39,7 @@
 		<div class="row-fluid" style="background-color: #C0C0C0; border-top: 1px solid darkgray; padding-top: 5px; padding-bottom: 5px;">
 
 			<div class="span6">
-				<span style="margin-left: 5px;" id="composite-description"><small>{{Description}}</small></span>
+				<span style="margin-left: 5px;" id="inspectorDescription"></span>
 			</div>
 
 			<div class="span6">
@@ -68,19 +56,13 @@
 	var RECORDS_PER_PAGE = 7;
 	var display = "#output";
 
-
 	WorkWithDataFromUrl("/composite/api", function (compositeMetadata) {
-		Using(compositeMetadata).Fill("#composite-name").TargetIsTemplate();
-
-		Using(compositeMetadata).Fill("#composite-description").TargetIsTemplate();
 
 		var queryRenderData = { ListClass: "dropdown-menu", ItemClass: "dropdown", Queries: compositeMetadata.Queries };
 		Using(queryRenderData).Fill("#composite-queries").With("/composite/ui/template/queries");
 
 		var inputModelRenderData = { ListClass: "dropdown-menu", ItemClass: "dropdown", InputModels: compositeMetadata.InputModels };
 		Using(inputModelRenderData).Fill("#composite-inputmodels").With("/composite/ui/template/input-models");
-
-		Using(compositeMetadata).Fill("#composite-agents").TargetIsTemplate();
 	});
 
 	$(document).on("click", ".agent", function () {
