--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/globalNav.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/globalNav.html
@@ -1,5 +1,5 @@
 ﻿<ul class="nav nav-pills" style="margin-bottom: 5px;">
-	<li class="active" id="nav-CompositeExplorer"><a href="#composite-explorer">{{Name}}</a></li>
+	<li class="active" id="nav-CompositeExplorer"><a href="#explorer">{{Name}}</a></li>
 	<li id="nav-CommandRegistry"><a href="#command-registry">Command Registry</a></li>
 	<li id="nav-SystemLogs"><a href="#system-logs">System Logs</a></li>
 </ul>
