--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/explorer.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/explorer.html
@@ -82,8 +82,12 @@
 
 		</div>
 
-		<div class="form-actions">
-			<button class="btn btn-primary">Publish</button>
+		<div class="control-group">
+
+			<div class="controls">
+				<button class="btn btn-primary">Publish</button>
+			</div>
+
 		</div>
 
 		</form>
