fixed basic scroll issues in content area

--- a/src/sdk/CompositeInspector/Views/new.html
+++ b/src/sdk/CompositeInspector/Views/new.html
@@ -30,7 +30,7 @@
 
 		<div class="row-fluid" style="height: 255px;">
 
-			<div id="inspectorMain" class="span12"><span id="euclid-error-output" class="hide"></span></div>
+			<div id="inspectorMain" class="span12" style="height: 255px; overflow-y: auto; overflow-x: hidden;"><span id="euclid-error-output" class="hide"></span></div>
 
 		</div>
 
